compiler/testData/diagnostics/testsWithStdLib/native/reified.kt
import kotlin.jvm.*

external fun <<!REIFIED_TYPE_PARAMETER_NO_INLINE!>reified<!> T> foo()
<!EXTERNAL_DECLARATION_CANNOT_BE_INLINED!>inline external fun <reified T> bar()<!>